# zk-frontend

./: Cargo.toml  README.md
src/: advices.rs  circuit.rs  circuit_impl_simple.rs  default_io_impl.rs  example.rs  lib.rs
src/backend/: api.rs  mod.rs  storage.rs
src/backend/runtime/: Cargo.toml
src/backend/runtime/src/: event.rs  executor.rs  lib.rs  reactor.rs  sample_storage.rs  storage.rs  task.rs  waker.rs
src/backend/runtime/src/adapters/: mod.rs  storage.rs
src/backend/runtime/src/event/: mod.rs  signal.rs
src/gadgets/: mod.rs
src/gadgets/traits/: atoms.rs  bigint_arith.rs  mod.rs  nonzeros.rs  poseidon.rs  poseidon_permutation.rs  sponge.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/protostar_frontend/: mod.rs
