workspace = { members = ["src/macros", "src/backend/runtime"] }
[package]
name = "zk_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ff = "0.13.0"
halo2curves = {git = "https://github.com/privacy-scaling-explorations/halo2curves" }
macros = {path="./src/macros"}
num-bigint = "0.4.4"
itertools = "*"